<resources>
    <string name="app_name">Facecook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--facebooksdk-->
    <string name="facebook_app_id">186829838605000</string>
    <string name="fb_login_protocol_scheme">fb186829838605000</string>

    <string name="action_settings">Settings</string>
    <string name="contenTest">Trăm năm trong cõi người ta, Chữ tài chữ mệnh khéo là ghét nhau. Trải qua một cuộc bể dâu, Những điều trông thấy mà đau đớn lòng</string>

    <!--Start string for welcomeScreen-->
    <string name="welComeActivity_hello_facecook">Cùng facecook chia sẻ nhưng khoảng khắc tuyệt vời!</string>

    <!--Start string for loginScreen-->
    <string name="err_msg_username">The username must be an email or phone number</string>
    <string name="err_msg_password">Password must be at least 6 characters</string>
    <string name="err_msg_password_again">Password and password again must be the same</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="textregister">No account yet? Create one</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <!--End string for loginScreen-->

    <!--Start string for Register Screen-->
    <string name="username_hint_Update">UserName</string>
    <string name="err_msg_username_Update">The username must be an email or phone number</string>
    <string name="fisrtname_hint_Update">FirstName</string>
    <string name="Birthday_hint_Update">Birthhday</string>
    <string name="text_button_submit">Submit</string>
    <string name="name_hint_Register">Name</string>

    <!--End string for Register Screen-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comments</string>
    <string name="done">Done</string>
    <string name="write_a_comment">Write a comment...</string>

    <!--start update user-->
    <string name="title_hint_Update">Edit details</string>
    <string name="nickname_hint_Update">NickName</string>
    <string name="userName_hint_Update">Username</string>
    <string name="password_hint_Update">Password</string>
    <string name="firstname_hint_Update">FirstName</string>
    <string name="lastname_hint_Update">LastName</string>
    <string name="address_hint_Update">Address</string>
    <string name="hometown_hint_Update">HomeTown</string>
    <string name="phone_hint_Update">Phone</string>
    <string name="email_hint_Update">Email</string>
    <string name="description_hint_Update">description</string>
    <string name="birthday_hint_Update">Birthday</string>
    <string name="permission_denied">permission denied</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_your_post">Add to your post</string>
    <string name="like">Like</string>
    <!--end update user-->
</resources>
