<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/comments"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/done" />
    </RelativeLayout>

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/relativeLayout" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineView1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/likepost" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nam and 999 others" />
    </LinearLayout>

    <View
        android:id="@+id/lineView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/linear1" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcComment"
        android:layout_width="@dimen/_400sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_below="@id/lineView2" />

    <View
        android:id="@+id/lineView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/rcComment"
        android:layout_marginTop="@dimen/_5sdp" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineView3"
        android:layout_marginTop="@dimen/_2sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:background="@drawable/camera" />

        <EditText
            android:id="@+id/edComment"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:hint="@string/write_a_comment" />


        <ImageView
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:background="@drawable/send" />
    </LinearLayout>
</RelativeLayout>
