<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/comments"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/done" />
    </RelativeLayout>

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/relativeLayout"
        android:background="#ccc" />


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineView1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/likepost" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nam and 999 others" />
    </LinearLayout>

    <View
        android:id="@+id/lineView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/linear1"
        android:background="#ccc" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcComment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_below="@id/lineView2" />

    <TextView
        android:id="@+id/txtNocomment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="No Comments Yet"
        android:textSize="20sp"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/camera" />

        <EditText
            android:id="@+id/edComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_2sdp"
            android:hint="@string/write_a_comment" />


        <ImageView
            android:id="@+id/imgSend"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/send" />
    </LinearLayout>
</RelativeLayout>
