<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.post.PostActiviy">

    <FrameLayout
        android:id="@+id/my_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/cancel"
                    android:textColor="#0093fc"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/create_post"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/post"
                    android:textColor="#0093fc"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#ccc" />
            <ProgressBar
                android:id="@+id/pb"
                android:max="100"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                />
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <vn.com.codedao.facecook.view.CircleImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/girl" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="Hoàng Văn Nam"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>


            <android.inputmethodservice.ExtractEditText
                android:id="@+id/edTextConten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="#00000000"
                android:hint="What's on your mind?"
                android:textSize="20sp" />

        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/lnBot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/edTextConten"
        android:background="@drawable/textview_border"
        tools:ignore="NotSibling">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/add_to_your_post" />
        <ImageView
            android:visibility="gone"
            android:id="@+id/imgPhoto"
            android:layout_toStartOf="@id/imgAddPhoto"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            />
        <ImageView
            android:id="@+id/imgAddPhoto"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/addphpto" />
    </RelativeLayout>



</RelativeLayout>
