<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blur"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@drawable/username2x"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:typeface="normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@drawable/password2x"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:typeface="normal" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/press_signin"
                android:tag="custom_login_button"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/textregister"
                android:textColor="@drawable/press_register" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@color/colorAccentDark" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="OR"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@color/colorAccentDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/press_sign_fb"
                android:drawableLeft="@drawable/ic_fb"
                android:tag="facebook_login_button"
                android:text="@string/sign_in_facebook"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/press_signin_gg"
                android:drawableLeft="@drawable/ic_gplus"
                android:tag="google_login_button"
                android:text="@string/sign_in_google"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbmainlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>